name:                hpcb
version:             0.1.0.0
synopsis:            PCB creation using a Haskell DSL (domain specific language)
description:         Please see README.md
homepage:            https://github.com/githubuser/hpcb#readme
license:             BSD3
license-file:        LICENSE
author:              Maxime ANDRE
maintainer:          iemxblog@gmail.com
copyright:           2016 Maxime ANDRE
category:            Electronics
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:
    Hpcb
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens

executable hpcb
  hs-source-dirs:      src
  ghc-options: -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens

test-suite tests
  hs-source-dirs: src tests
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    base,
    containers,
    lens,
    hpcb,
    hspec
  default-language: Haskell2010
