name:                hpcb
version:             0.1.0.0
synopsis:            PCB creation using a Haskell DSL (domain specific language)
description:         Please see README.md
homepage:            https://github.com/githubuser/hpcb#readme
license:             BSD3
license-file:        LICENSE
author:              Maxime ANDRE
maintainer:          iemxblog@gmail.com
copyright:           2016 Maxime ANDRE
category:            Electronics
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:
    Hpcb,
    Hpcb.Component,
    Hpcb.Component.Atmel,
    Hpcb.Component.CapacitiveSensor,
    Hpcb.Component.Capacitor,
    Hpcb.Component.LED,
    Hpcb.Component.OpAmp,
    Hpcb.Component.PinHeader,
    Hpcb.Component.QFP,
    Hpcb.Component.Regulator,
    Hpcb.Component.Resistor,
    Hpcb.Component.SOIC,
    Hpcb.Component.SOT,
    Hpcb.Component.Switch,
    Hpcb.Data,
    Hpcb.Data.Action,
    Hpcb.Data.Base,
    Hpcb.Data.Circuit,
    Hpcb.Data.Connection,
    Hpcb.Data.Effects,
    Hpcb.Data.Footprint,
    Hpcb.Data.FpElement,
    Hpcb.Data.Graphic,
    Hpcb.Data.KicadPCB,
    Hpcb.Data.Layer,
    Hpcb.Data.Net,
    Hpcb.Data.NetNumbering,
    Hpcb.Data.Segment,
    Hpcb.Functions,
    Hpcb.SExpr
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    matrix

executable hpcb
  hs-source-dirs:      src
  ghc-options: -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    matrix

executable atmega328p-dev-board
  hs-source-dirs:      examples
  ghc-options: -Wall
  main-is:             atmega328p-dev-board.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    matrix,
    hpcb

test-suite tests
  hs-source-dirs: src tests
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    base,
    containers,
    lens,
    matrix,
    hpcb,
    hspec
  default-language: Haskell2010
